--- a/portfolio.css
+++ b/portfolio.css
@@ -322,7 +322,7 @@ body {
 .portfolio_text4 {
     width: 27%;
     height: 100%;
-    background-color: white;
+    background-color: #d2cabf;
     padding-left: 20px;
 }
 .photo_right {
