--- a/portfolio.css
+++ b/portfolio.css
@@ -372,3 +372,15 @@ body {
 .portfolio_text4 hr{
     background-color: #93897d;
 }
+
+.PF{
+    font-size: 80px;
+    color: black;
+    width: 80px;
+    height: 100px;
+    margin: px 0px 0px 170px;
+    /* margin-top: 170px; */
+    position: absolute;
+    margin-top: 107px;
+    margin-left: 177px;
+}
