--- a/portfolio.css
+++ b/portfolio.css
@@ -293,35 +293,42 @@ body {
     position: relative;
     background: #c1e9ca;
 }
+
 #p3 {
     position: relative;
     background: #f1f0ee;
 }
+
 #p4 {
     position: relative;
     background: #e1deda;
 }
 
-.text_left{
-    float:left;
+.text_left {
+    float: left;
     width: 20%;
     height: 100%;
     padding-left: 20px;
     position: relative;
 }
+
 .portfolio_text {
-    background-color: #ffecee;
+    background-color: #ffced8;
 
 }
+
 .portfolio_text2 {
     background-color: #61de7d;
 }
+
 .portfolio_text3 {
-    background-color: white;
+    background-color: gainsboro;
 }
+
 .portfolio_text4 {
     background-color: #d2cabf;
 }
+
 .photo_right {
     float: right;
     width: 80%;
@@ -357,23 +364,24 @@ body {
     position: absolute;
     left: 226px;
 }
-.portfolio_text hr{
+
+.portfolio_text hr {
     background-color: #c2271f;
 }
 
-.portfolio_text2 hr{
+.portfolio_text2 hr {
     background-color: #33a84f;
 }
 
-.portfolio_text3 hr{
-    background-color: #dedcdb;
+.portfolio_text3 hr {
+    background-color: #9a9a9a;
 }
 
-.portfolio_text4 hr{
+.portfolio_text4 hr {
     background-color: #93897d;
 }
 
-.PF{
+.PF {
     font-size: 80px;
     color: black;
     width: 80px;
@@ -384,19 +392,80 @@ body {
     margin-top: 107px;
     margin-left: 177px;
 }
-#PFF{
+
+#PFF {
     margin-top: 249px;
     position: absolute;
     margin-left: 154px;
     color: black;
 }
 
-#PFF h3{
+#PFF h3 {
     font-size: 23px;
     font-weight: normal;
 }
 
-#PFF h2{
+#PFF h2 {
     font-size: 30px;
     margin-bottom: 20px;
+}
+
+.color span {
+    width: 25px;
+    height: 25px;
+    border-radius: 25px;
+    display: inline-block;
+    margin-right: 3px;
+}
+
+/* 첫번째 컬러표 */
+#p1 .color span:nth-of-type(1) {
+    background-color: rgb(157 7 0);
+}
+
+#p1 .color span:nth-of-type(2) {
+    background-color: #ffecee;
+}
+
+#p1 .color span:nth-of-type(3) {
+    display: none;
+}
+
+/* 두번째 컬러표 */
+#p2 .color span:nth-of-type(1) {
+    background-color: rgb(51 168 79);
+}
+
+#p2 .color span:nth-of-type(2) {
+    background-color: #fdcf34;
+}
+
+#p2 .color span:nth-of-type(3) {
+    display: none;
+}
+
+/* 세번째 컬러표 */
+#p3 .color span:nth-of-type(1) {
+    background-color: #f0efed;
+}
+
+#p3 .color span:nth-of-type(2) {
+    background-color: #cb3d4a;
+}
+
+#p3 .color span:nth-of-type(3) {
+    display: none;
+}
+
+/* 네번째 컬러표 */
+#p4 .color span:nth-of-type(1) {
+    background-color: rgb(213 41 39);
+}
+
+#p4 .color span:nth-of-type(2) {
+    background-color: #63666a;
+}
+
+#p4 .color span:nth-of-type(3) {
+    background-color: #c1c1c1;
 }
