--- a/portfolio.css
+++ b/portfolio.css
@@ -497,12 +497,52 @@ body {
     margin-left: 15px;
 }
 
-.text_left .BTN {
-    width: 77px;
-    height: 33px;
-    font-size: 21px;
-    border-radius: 7px;
-    border: 3px;
+#p4 button{
+    background-color: #817166;
+}
+
+#p4 .BTN{
     color: black;
     background-color: white;
+    border: 2px solid #817166;
+}
+
+#p2 button{
+    background-color: #33a84f;
+}
+
+#p2 .BTN{
+    color: black;
+    background-color: white;
+    border: 2px solid #33a84f;
+}
+
+#p3 button{
+    background-color: #978170;
+}
+
+#p3 .BTN{
+    color: black;
+    background-color: white;
+    border: 2px solid #978170;
+}
+
+#p4 button{
+    background-color: #817166;;
+}
+
+#p4 .BTN{
+    color: black;
+    background-color: white;
+    border: 2px solid #817166;;
+}
+
+#p1 button{
+    background-color: #c2271f;
+}
+
+#p1 .BTN{
+    color: black;
+    background-color: white;
+    border: 2px solid #c2271f;
 }
