--- a/portfolio.css
+++ b/portfolio.css
@@ -549,20 +549,43 @@ body {
     border: 2px solid #c2271f;
 }
 
+.mobile_right{
+    width: 230px;
+    height: 450px;
+    position: absolute;
+    /* bottom: 8%;
+    right: 4%; */
+    bottom: 1%;
+    right: 4%;
+    overflow: hidden;
+}
+.mobile_photo{
+    width: 100%;
+    height: 100%;
+}
 .mobile img {
     width: 230px;
     position: absolute;
     z-index: 5;
-    bottom: 1%;
-    right: 4%;
+    /* bottom: 1%;
+    right: 4%; */
+    top:0;
+    left: 0;
 }
 
-.mobile_photo .img2 {
+.mobile_photo .img2{
+    width: 98%;
+    height: 90%;
     position: absolute;
-    top: 0;
+    top: 0px;
     left: 0;
-    margin: 58px 0 0 19px;
-    width: 192px;
-    height: 80%;
     overflow: hidden;
+}
+
+.mobile_photo .img2 img {
+    position: absolute;
+    top: 59px;
+    left: 20px;
+    width: 192px;
+    z-index: 1;
 }
