--- a/portfolio.css
+++ b/portfolio.css
@@ -589,3 +589,23 @@ body {
     width: 192px;
     z-index: 1;
 }
+
+#About_me {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: rgb(226, 226, 226);
+}
+
+.About_mebox{
+    width: 75%;
+    height: 75%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    background-color: white;
+    box-shadow: 10px 10px 20px 5px gray;
+    padding: 2% 4%;
+    border-radius: 40px 200px;
+}
