--- a/portfolio.css
+++ b/portfolio.css
@@ -619,3 +619,11 @@ body {
     color: black;
     float: left;
 }
+
+.About_mebox .sub_title h3 {
+    font-weight: normal;
+    font-size: 20px;
+    color: black;
+    float: left;
+    
+}
