--- a/portfolio.css
+++ b/portfolio.css
@@ -641,6 +641,7 @@ body {
     float: right;
     padding-left: 30px;
     color: black;
+    position: relative;
 }
 .About_mebox .text h2{
     color: black;
@@ -660,7 +661,7 @@ body {
     color: black;
 }
 .About_mebox .text table{
-margin-top: 105px;
+    display: inline;
 }
 .About_mebox .text table th {
     width: 100px;
